database setup with basic pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=demo
+server.port=8080
+
+
+spring.datasource.url=jdbc:mysql://lifelinemysql.mysql.database.azure.com:3306/usersdb?serverTimezone=UTC&useSSL=TRUE&requireSSL=FALSE
+spring.datasource.username=lldb
+spring.datasource.password=Lifeclinic45@!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=update
