--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,12 @@
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.16.0</spring-cloud-azure.version>
 	</properties>
-	<dependencies>
+	<dependencies>		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -88,6 +93,8 @@
 		</plugins>
 	</build>
 
+
+	
 
 	
 </project>
