--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=Lifeclinic45@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
