--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.16.0</spring-cloud-azure.version>
 	</properties>
-	<dependencies>		
+	<dependencies>	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -93,8 +97,4 @@
 		</plugins>
 	</build>
 
-
-	
-
-	
 </project>
