--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,7 @@
 		<spring-cloud-azure.version>5.16.0</spring-cloud-azure.version>
 	</properties>
 	<dependencies>	
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -51,6 +48,11 @@
 		<dependency>
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.azure.spring</groupId>
@@ -97,4 +99,6 @@
 		</plugins>
 	</build>
 
+
+	
 </project>
