--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=demo
 server.port=8080
 
-
-spring.datasource.url=jdbc:mysql://lifelinemysql.mysql.database.azure.com:3306/usersdb?serverTimezone=UTC&useSSL=TRUE&requireSSL=FALSE
-spring.datasource.username=lldb
+spring.datasource.url=jdbc:sqlserver://lifelineclinic.database.windows.net:1433;database=lifelinedb;user=LLDB@lifelineclinic;password=Lifeclinic45@!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=LLDB
 spring.datasource.password=Lifeclinic45@!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
