--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-
+server.port=8080
 
 spring.datasource.url=jdbc:sqlserver://lifelineclinic.database.windows.net:1433;database=lifelinedb;user=LLDB@lifelineclinic;password=Lifeclinic45@!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=LLDB
