--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+server.error.whitelabel.enabled=false
+logging.level.org.springframework.web=DEBUG
+logging.level.org.thymeleaf=TRACE
