--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.thymeleaf=TRACE
+
+   spring.thymeleaf.prefix=classpath:/templates/ 
+
+   spring.thymeleaf.suffix=.html
+
 
