porduction mode for jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=LLDB
 spring.datasource.password=Lifeclinic45@!
 
 spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
